This file documents the revision history for the Mod-Gearman-Worker-Go

next:
          - update internal check_nsc_web to 0.6.2
          - unify return code to unknown if file was not found

1.3.7    Fri Jul 14 13:07:32 CEST 2023
          - add usage for testcmd command
          - fix performance metrics for epn checks

1.3.6    Thu Jun 29 11:00:12 CEST 2023
          - fix crash when multiple internal check_nsc_web checks run in parallel

1.3.5    Tue Jun 27 16:26:12 CEST 2023
          - fix crash when using internal checks and prometheus metrics
          - improve output on configuraton errors

1.3.4    Mon Jun 26 15:47:45 CEST 2023
          - epn: improve timeout handling
          - add internal check_nsc_web handler
          - add internal check_dummy handler

1.3.3    Fri Apr 28 09:55:33 CEST 2023
          - parse shell args to execute more commands without shell
          - use internal negate if command starts with .../negate to skip that fork
          - epn: do not handle warnings as fatal errors

1.3.2    Thu Mar  2 16:21:22 CET 2023
          - improve restarting epn server
          - fix reading large epn server plugin output

1.3.1    Wed Feb 15 12:09:33 CET 2023
          - fix epn file detection
          - fix issue with dup servers (#19)
          - fix sending max_age error result
          - prometheus: add exemplars to metrics
          - improve restarting

1.3.0    Wed Feb  1 13:55:44 CEST 2022
          - add embedded perl support
          - send_gearman: support reading plugin output from stdin
          - worker: adjust default load_cpu_multi to 2.5

1.2.4    Tue Sep 27 10:38:12 CEST 2022
          - improve worker error output

1.2.3    Tue Sep 27 10:38:12 CEST 2022
          - adjust memory default threshold to 70%
          - add load_cpu_multi option to set load based on number of CPUs (default 1.5)
          - add support for conf.d folder. --config=folder will read .cfg/.conf files recursively
